using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace PlantUMLTest.인터페이스
{
    public interface Animal
    {
        public void eat();
        public void walk();
    }
}
